Sigue dando error pero ya arreglé el XML